@@ -15,6 +15,7 @@ Date: ????
     - Remove pingpong mechanic for inconsistent behaviour
     - Make the assemblers arm eachother
     - Add container that detatches with `.drop_target = nil`
+    - Rotate the container along with the inserter
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2025. 01. 11
